@@ -1,0 +1,142 @@
+<?xml version="1.0" encoding="utf-8" standalone="no" ?>
+<ViewContext version="1.0.0"
+             id="owsview_generated_context"
+             xmlns="http://www.opengis.net/context"
+             xmlns:xlink="http://www.w3.org/1999/xlink"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://www.opengis.net/context http://schemas.opengis.net/context/1.0.0/context.xsd">
+ <General>
+  <Window width="500" height="300" />
+  <BoundingBox SRS="EPSG:4326" minx="-160.212693" miny="20.096000" maxx="-53.787307" maxy="83.904000" />
+  <Title>owsview Viewer Client Generator automatically generated context</Title>
+  <KeywordList>
+   <Keyword>owsview</Keyword>
+   <Keyword>CGDI</Keyword>
+   <Keyword>GeoConnections</Keyword>
+   <Keyword>NRCan</Keyword>
+   <Keyword>OGC</Keyword>
+  </KeywordList>
+  <Abstract>This is a generated context, automatically generated by owsview Viewer Client Generator (http://cgdi-dev.geoconnections.org/prototypes/owsview) on Wed Nov 10 09:34:23 2004 from IP 199.212.18.131</Abstract> 
+  <LogoURL width="150" height="75" format="image/gif">
+   <OnlineResource xlink:type="simple" xlink:href="http://cgdi-dev.geoconnections.org/prototypes/owsview/graphics/cgdi.png"/>
+  </LogoURL>
+  <DescriptionURL format="text/html">
+   <OnlineResource xlink:type="simple" xlink:href="http://cgdi.gc.ca/"/>
+  </DescriptionURL>
+  <ContactInformation>
+   <ContactPersonPrimary>
+    <ContactPerson>Tom Kralidis</ContactPerson>
+    <ContactOrganization>Environment Canada</ContactOrganization>
+   </ContactPersonPrimary>
+   <ContactPosition>Systems Scientist</ContactPosition>
+    <ContactAddress>
+    <AddressType>postal</AddressType>
+    <Address>867 Lakeshore Road</Address>
+    <City>Burlington</City>
+    <StateOrProvince>Ontario</StateOrProvince>
+    <PostCode>L7R 4A6</PostCode>
+    <Country>Canada</Country>
+   </ContactAddress>
+   <ContactVoiceTelephone>+01-905-336-4409</ContactVoiceTelephone>
+   <ContactFacsimileTelephone>+01-905-336-4499</ContactFacsimileTelephone>
+   <ContactElectronicMailAddress>tom.kralidis@ec.gc.ca</ContactElectronicMailAddress>
+  </ContactInformation>
+ </General> 
+ <LayerList>
+  <Layer queryable="0" hidden="0">
+   <Server service="OGC:WMS" version="1.1.1" title="OGC:WMS">
+    <OnlineResource xlink:type="simple" xlink:href="http://mapserv2.esrin.esa.it/ionicweb/map/GAEL_WORLD_MARCH"/>
+   </Server>
+   <Name>GAEL_WORLD_MARCH</Name>
+   <Title>Mosaic of MERIS_RR products</Title>
+   <SRS>EPSG:4326</SRS>
+   <FormatList>
+    <Format current="1">image/png</Format>
+   </FormatList>
+   <StyleList>
+   <Style current="1">
+    <Name>default</Name>
+    <Title>default</Title>
+   </Style>
+   </StyleList>
+  </Layer>
+  <Layer queryable="1" hidden="0">
+   <Server service="OGC:WMS" version="1.1.1" title="OGC:WMS">
+    <OnlineResource xlink:type="simple" xlink:href="http://ceoware2.ccrs.nrcan.gc.ca/cubewerx/cubeserv/cubeserv.cgi"/>
+   </Server>
+   <Name>COASTL_BND_1M:Foundation</Name>
+   <Title>Coastlines</Title>
+   <SRS>EPSG:4326</SRS>
+   <FormatList>
+    <Format current="1">image/gif</Format>
+   </FormatList>
+   <StyleList>
+   <Style current="1">
+    <Name>default</Name>
+    <Title>default</Title>
+    <LegendURL>
+     <OnlineResource xlink:type="simple" xlink:href="http://ceoware2.ccrs.nrcan.gc.ca/cubewerx/cubeserv/cubeserv.cgi?VERSION=1.1.1&amp;REQUEST=GetLegendGraphic&amp;LAYER=COASTL_BND_1M:Foundation&amp;FORMAT=image/gif"/>
+    </LegendURL>    
+   </Style>
+   </StyleList>
+  </Layer>
+  <Layer queryable="1" hidden="0">
+   <Server service="OGC:WMS" version="1.1.1" title="OGC:WMS">
+    <OnlineResource xlink:type="simple" xlink:href="http://ceoware2.ccrs.nrcan.gc.ca/cubewerx/cubeserv/cubeserv.cgi"/>
+   </Server>
+   <Name>POLBNDL_BND_1M:Foundation</Name>
+   <Title>Political Boundaries</Title>
+   <SRS>EPSG:4326</SRS>
+   <FormatList>
+    <Format current="1">image/gif</Format>
+   </FormatList>
+   <StyleList>
+   <Style current="1">
+    <SLD>
+     <OnlineResource xlink:type="simple" xlink:href="http://cgdi-dev.geoconnections.org/prototypes/owsview/cache/110009719722986sld_1_0_0.xml" />
+    </SLD>
+    <LegendURL>
+     <OnlineResource xlink:type="simple" xlink:href="http://ceoware2.ccrs.nrcan.gc.ca/cubewerx/cubeserv/cubeserv.cgi?VERSION=1.1.1&amp;REQUEST=GetLegendGraphic&amp;LAYER=POLBNDL_BND_1M:Foundation&amp;FORMAT=image/gif"/>
+    </LegendURL>    
+   </Style>
+   </StyleList>
+  </Layer>
+  <Layer queryable="1" hidden="0">
+   <Server service="OGC:WMS" version="1.1.0" title="OGC:WMS">
+    <OnlineResource xlink:type="simple" xlink:href="http://geo.compusult.net/scripts/mapman.dll?Name=weather"/>
+   </Server>
+   <Name>WEATHER</Name>
+   <Title>North American Hourly METAR Weather Reports</Title>
+   <SRS>EPSG:4326</SRS>
+   <FormatList>
+    <Format current="1">image/gif</Format>
+   </FormatList>
+   <StyleList>
+   <Style current="1">
+    <Name>DEFAULT</Name>
+    <Title>DEFAULT</Title>
+    <LegendURL>
+     <OnlineResource xlink:type="simple" xlink:href="http://geo.compusult.net/legends/weather.gif"/>
+    </LegendURL>    
+   </Style>
+   </StyleList>
+  </Layer>
+  <Layer queryable="1" hidden="0">
+   <Server service="OGC:WMS" version="1.1.0" title="OGC:WMS">
+    <OnlineResource xlink:type="simple" xlink:href="http://www2.demis.nl/mapserver/request.asp"/>
+   </Server>
+   <Name>Cities</Name>
+   <Title>Cities</Title>
+   <SRS>EPSG:4326</SRS>
+   <FormatList>
+    <Format current="1">image/gif</Format>
+   </FormatList>
+   <StyleList>
+   <Style current="1">
+    <Name>default</Name>
+    <Title>default</Title>
+   </Style>
+   </StyleList>
+  </Layer>
+ </LayerList>
+</ViewContext>
